More streamlined club application system

--- a/clubs-application.css
+++ b/clubs-application.css
@@ -70,3 +70,9 @@
     overflow-y: auto;
 }
 
+#application {
+  padding: 30px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
