user event update mysql works

--- a/public/stylesheets/club_home.css
+++ b/public/stylesheets/club_home.css
@@ -120,3 +120,19 @@ button {
     color: white;
     font-size: small;
 }
+
+/* Create Event Form */
+#createEvent {
+    padding: 30px;
+    border-top: solid black;
+}
+
+/* Post Update Form */
+#postUpdate {
+    padding: 30px;
+    border-top: solid black;
+}
+
+.formHeading {
+    padding: 0px 0px 10px;
+}
