kian events updates club_id working

--- a/public/stylesheets/clubs.css
+++ b/public/stylesheets/clubs.css
@@ -61,3 +61,19 @@
 .eventsUpdates{
     padding: 30px;
 }
+
+/* Create Event Form */
+#createEvent {
+    padding: 30px;
+    border-top: solid black;
+}
+
+/* Post Update Form */
+#postUpdate {
+    padding: 30px;
+    border-top: solid black;
+}
+
+.formHeading {
+    padding: 0px 0px 10px;
+}
