--- a/public/stylesheets/clubs.css
+++ b/public/stylesheets/clubs.css
@@ -1,6 +1,6 @@
 #club-title {
-    background-color: rgb(17, 17, 17);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: black;
     margin: 0;
     padding: 20px;
     border-bottom: 0.1px solid white;
@@ -26,13 +26,21 @@
 }
 
 #register-button {
-    background-color: blue;
+    background-color: white;
     padding: 6px 18px;
     border-radius: 5px;
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #FFFFFF;
+    color: black;
     text-decoration: none;
 }
+
+#email-notifs-button {
+    background-color: white;
+    padding: 6px 18px;
+    border-radius: 5px;
+    color: black;
+    text-decoration: none;
+}
+
 
 /* Club content */
 #clubs-content {
@@ -81,4 +89,12 @@
 #updateEvent {
     padding: 30px;
     border-top: solid black;
+}
+
+/*context image */
+.context_photo {
+    display: inline;
+    width: 500px;
+    height: 350px;
+    padding: 20px;
 }
