--- a/public/stylesheets/webpage.css
+++ b/public/stylesheets/webpage.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+
 body {
     background-color: white;
+    font-family: 'Space Mono';
 }
 
 /* Header */
