--- a/public/stylesheets/webpage.css
+++ b/public/stylesheets/webpage.css
@@ -91,7 +91,7 @@ button {
 /* Form */
 #outer-form {
     padding: 30px;
-    display: flex;
+    display: none; /* XIAOYU THURSDAY MORNING  */
     align-items: center;
     border-bottom: 0.1px solid white;
 
