80% complete on change user info

--- a/public/stylesheets/webpage.css
+++ b/public/stylesheets/webpage.css
@@ -25,9 +25,9 @@ body {
     padding: 20px;
 }
 
-button {
+/*button {
     color:white;
-}
+}*/
 
 /* Advertisement/Information */
 #outer-advertisement {
