--- a/public/stylesheets/user.css
+++ b/public/stylesheets/user.css
@@ -126,3 +126,52 @@ th {
     color: white;
     font-size: small;
 }
+
+#overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent overlay */
+  z-index: 9999; /* set a higher z-index value to ensure it covers other elements */
+  display: none;
+}
+
+#edit-user-info-pop-up{
+    width: 400px;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 0, 40px, 40px;
+    display: none;
+}
+
+.visible{
+    visibility: visible;
+}
+
+.user-details-button {
+    background-color: black;
+    padding: 6px 18px;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
+}
+
+.submit-user-details-button {
+    background-color: white;
+    padding: 6px 18px;
+    border-radius: 5px;
+    color: black;
+    text-decoration: none;
+}
+
+.divs-in-popup{
+    padding: 20px;
+}
