--- a/public/stylesheets/styleforlogin.css
+++ b/public/stylesheets/styleforlogin.css
@@ -65,3 +65,12 @@ form {
     margin-top: 20px;
     margin-bottom: 20px;
     }
+
+  .home-link {
+    background-color: white;
+    padding: 6px 18px;
+    border-radius: 10px;
+    margin: 10px;
+    color: black;
+    text-decoration: none;
+}
