--- a/public/stylesheets/club_home.css
+++ b/public/stylesheets/club_home.css
@@ -120,3 +120,9 @@ button {
     color: white;
     font-size: small;
 }
+
+.divManageUsers {
+    padding: 30px;
+    border-top: solid black;
+    display: none;
+}
