last push maybe?

--- a/public/stylesheets/webpage.css
+++ b/public/stylesheets/webpage.css
@@ -143,9 +143,11 @@ body {
 }
 
 .centered {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
     align-items: center;
     height: 200px;
     padding: 20px;
-  }
+}
